tests/sources/should-compile/if-conditions.c
int x = 4;

// ===========================================================
if (x)
{
    x + 1;
}

if (x)
{
    if (x)
        x + 1;
}
// ===========================================================
if (x)
{
    x + 1;
}
else
{
    x + 1;
}

if (x)
{
    if (x)
        x + 1;
    else
        x + 1;
}
// ===========================================================
if (x)
{
    if (x)
        x + 1;
    else
        x + 1;
}
else
{
    x + 2;
}