tests/sources/should-not-compile/repeat-no-condition.c
int x = 10;
int y = 0;

repeat y = y + 1 until;
